--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,11 @@ dependencies:
   scroll_loop_auto_scroll: ^0.0.5
   http: ^0.13.5
   get: 4.6.6
-
+  screenshot: ^2.1.0
+  share_plus: ^7.2.1
+  path_provider: ^2.1.1
+  flutter_secure_storage: ^9.0.0
+  kakao_flutter_sdk_user: ^1.3.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
