--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   path_provider: ^2.1.1
   flutter_secure_storage: ^9.0.0
   kakao_flutter_sdk_user: ^1.3.1
+  flutter_inappwebview: ^6.0.0-beta.28
+  flutter_web_auth_2: ^3.0.3
+  palette_generator: ^0.3.3+3
+  flutter_rating_bar: ^4.0.1
+  shared_preferences: ^2.2.2
+  # flutter_html: ^3.0.0-beta.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -54,7 +60,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  flutter_animate: ^4.2.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
